Fixed frontend gallery not showing first image in album as thumbnail

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -252,3 +252,6 @@ td:last-child {
     background-color: #8bdda8;
     color: white;
 }
+th {
+    text-align: center!important;
+}
